# python-mini-project

./: .gitignore  README.md
Address Validator/: refactor.py
Cat_command/: cat.py  main.py  pyproject.toml  refactor.py
Chinese_FlashCard/app/: models.py  pyproject.toml
Converting_Roman_to_Integer/: Converting_Roman_to_Integer.py
Crud_in_flask/: database.db  main.py  pyproject.toml
Crud_in_flask/templates/: base.html  create.html  edit.html  index.html
Dictionary/: README.md  dictionary.py
HangMan/: HangMan.py  README.md  words.txt
Hangman_Game/: hangman.py
Investment Calculator/: Calc.py  README.md
Morse_code_beep/: README.md  main.py
Motion_Detection/: README.md  main.py
Object_Detection/: README.md  object-detection.py  requirements.txt
Password Generator/: password_generator.py
RSS_Manager/: LICENSE  README.md  main.py  pyproject.toml  utils.py
RSS_Manager/templates/: add_feed.html  articles_list.html  delete_feed.html  feeds_list.html  index.html
Simple_Image_resize/: README.md  main.py
Speech_To_Text/: Speech_To_Text.py  main.py  pyproject.toml  refactor.py
Todo_App/: main.py  pyproject.toml
Web Scraping IPhone from Flipkart/: README.md  all functions.py  project.py  project_web_scraping.ipynb
Word_Jumble/: README.md  word_jumble.py
desktopassistant/: index.py  main.py  pyproject.toml
simple-chatbot/: main.py  pyproject.toml
string_manipulator/: README.md  sample.py  string_manipulator.py
website-builder/: README.md
