[project]
name = "rss-manager"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "geoqiao", email = "realvincentqiao@gmail.com" }]
dependencies = [
    "fastapi[all]>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.28",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "feedparser>=6.0.11",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
lock-with-sources = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rss_manager"]

[tool.pyright]
# include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", ".venv"]
# ignore = ["src/oldstuff"]

defineConstant = { DEBUG = true }

venvPath = "."
venv = ".venv"

# stubPath = [".venv"]
strict = ["."]
pythonVersion = "3.12"
typeCheckingMode = "standard"
strictListInference = true
reportDuplicateImport = true
reportMissingImports = true
reportMissingTypeStubs = true
reportIncompleteStub = "none"
